// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Pagination Defaults smoke-test 1`] = `
<div data-test-block="true">
  <nav class="_pagination_1frpa_5"
       aria-label="Sidevelger"
  >
    <div class
         aria-live="polite"
         aria-atomic="true"
    >
      Viser 1–10 av 15
    </div>
    <ul class="_paginationList_1frpa_20 ">
      <li>
        <button class="_button_6ybyo_1 _button_primary_6ybyo_1   _button_2o1sv_5"
                type="button"
                aria-current="true"
        >
          <span class="_buttonText_6ybyo_69">
            1
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            2
          </span>
        </button>
      </li>
      <li class="_element_rightArrow_2o1sv_38">
        <button class="_button_1dutd_1  _button_withIconRight_1dutd_6 _button_2o1sv_5"
                type="button"
        >
          <span class>
            Neste
          </span>
          <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1dutd_32"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="m7.1 5.8 6.1 6.1L7.1 18 9 19.9l8-8-8-8-1.9 1.9Z">
            </path>
          </svg>
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Tester/Pagination HidePrevNextButtonTitle smoke-test 1`] = `
<div data-test-block="true">
  <nav class="_pagination_1frpa_5"
       aria-label="Sidevelger"
  >
    <div class
         aria-live="polite"
         aria-atomic="true"
    >
      Viser 1–10 av 70
    </div>
    <ul class="_paginationList_1frpa_20 ">
      <li>
        <button class="_button_6ybyo_1 _button_primary_6ybyo_1   _button_2o1sv_5"
                type="button"
                aria-current="true"
        >
          <span class="_buttonText_6ybyo_69">
            1
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            2
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            3
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            4
          </span>
        </button>
      </li>
      <li>
        <p class="_elipsis_2o1sv_29"
           aria-label
        >
          ...
        </p>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            7
          </span>
        </button>
      </li>
      <li class="_element_rightArrow_2o1sv_38">
        <button class="_button_g87u5_1 _button_medium_g87u5_45  "
                type="button"
        >
          <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
               viewbox="0 0 24 24"
               focusable="false"
               aria-labelledby="svgtitle-:r3:"
               aria-hidden="false"
               role="img"
          >
            <title id="svgtitle-:r3:">
              Neste
            </title>
            <path d="m7.1 5.8 6.1 6.1L7.1 18 9 19.9l8-8-8-8-1.9 1.9Z">
            </path>
          </svg>
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Tester/Pagination Sibling play-test 1`] = `
<div data-test-block="true">
  <nav class="_pagination_1frpa_5"
       aria-label="Sidevelger"
  >
    <div class
         aria-live="polite"
         aria-atomic="true"
    >
      Viser 21–30 av 70
    </div>
    <ul class="_paginationList_1frpa_20 ">
      <li class="_element_leftArrow_2o1sv_35">
        <button class="_button_1dutd_1 _button_withIconLeft_1dutd_6  _button_2o1sv_5"
                type="button"
        >
          <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1dutd_32"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="m16.9 17.98-6.1-6.1 6.1-6.1-1.8-1.9-8 8 8 8 1.8-1.9Z">
            </path>
          </svg>
          <span class>
            Forrige
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            1
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            2
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_primary_6ybyo_1   _button_2o1sv_5"
                type="button"
                aria-current="true"
        >
          <span class="_buttonText_6ybyo_69">
            3
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            4
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            5
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            6
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            7
          </span>
        </button>
      </li>
      <li class="_element_rightArrow_2o1sv_38">
        <button class="_button_1dutd_1  _button_withIconRight_1dutd_6 _button_2o1sv_5"
                type="button"
        >
          <span class>
            Neste
          </span>
          <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1dutd_32"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="m7.1 5.8 6.1 6.1L7.1 18 9 19.9l8-8-8-8-1.9 1.9Z">
            </path>
          </svg>
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Tester/Pagination WithAttributes play-test 1`] = `
<div data-test-block="true">
  <nav id="htmlId"
       class="_pagination_1frpa_5 dummyClassname"
       lang="nb"
       data-testid="123ID"
       aria-label="Sidevelger"
  >
    <div class
         aria-live="polite"
         aria-atomic="true"
    >
      Viser 1–10 av 70
    </div>
    <ul class="_paginationList_1frpa_20 ">
      <li>
        <button class="_button_6ybyo_1 _button_primary_6ybyo_1   _button_2o1sv_5"
                type="button"
                aria-current="true"
        >
          <span class="_buttonText_6ybyo_69">
            1
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            2
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            3
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            4
          </span>
        </button>
      </li>
      <li>
        <p class="_elipsis_2o1sv_29"
           aria-label
        >
          ...
        </p>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            7
          </span>
        </button>
      </li>
      <li class="_element_rightArrow_2o1sv_38">
        <button class="_button_1dutd_1  _button_withIconRight_1dutd_6 _button_2o1sv_5"
                type="button"
        >
          <span class>
            Neste
          </span>
          <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1dutd_32"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="m7.1 5.8 6.1 6.1L7.1 18 9 19.9l8-8-8-8-1.9 1.9Z">
            </path>
          </svg>
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Tester/Pagination WithControlled play-test 1`] = `
<div data-test-block="true">
  <nav class="_pagination_1frpa_5"
       aria-label="Sidevelger"
  >
    <div class
         aria-live="polite"
         aria-atomic="true"
    >
      Viser 6–10 av 30
    </div>
    <ul class="_paginationList_1frpa_20 ">
      <li class="_element_leftArrow_2o1sv_35">
        <button class="_button_1dutd_1 _button_withIconLeft_1dutd_6  _button_2o1sv_5"
                type="button"
        >
          <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1dutd_32"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="m16.9 17.98-6.1-6.1 6.1-6.1-1.8-1.9-8 8 8 8 1.8-1.9Z">
            </path>
          </svg>
          <span class>
            Forrige
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            1
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_primary_6ybyo_1   _button_2o1sv_5"
                type="button"
                aria-current="true"
        >
          <span class="_buttonText_6ybyo_69">
            2
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            3
          </span>
        </button>
      </li>
      <li>
        <p class="_elipsis_2o1sv_29"
           aria-label
        >
          ...
        </p>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            6
          </span>
        </button>
      </li>
      <li class="_element_rightArrow_2o1sv_38">
        <button class="_button_1dutd_1  _button_withIconRight_1dutd_6 _button_2o1sv_5"
                type="button"
        >
          <span class>
            Neste
          </span>
          <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1dutd_32"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="m7.1 5.8 6.1 6.1L7.1 18 9 19.9l8-8-8-8-1.9 1.9Z">
            </path>
          </svg>
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Tester/Pagination WithCustomAriaLabel play-test 1`] = `
<div data-test-block="true">
  <nav class="_pagination_1frpa_5"
       aria-label="Egen tekst på nav-elementets aria-label"
  >
    <div class
         aria-live="polite"
         aria-atomic="true"
    >
      Viser 1–10 av 70
    </div>
    <ul class="_paginationList_1frpa_20 ">
      <li>
        <button class="_button_6ybyo_1 _button_primary_6ybyo_1   _button_2o1sv_5"
                type="button"
                aria-current="true"
        >
          <span class="_buttonText_6ybyo_69">
            1
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            2
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            3
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            4
          </span>
        </button>
      </li>
      <li>
        <p class="_elipsis_2o1sv_29"
           aria-label
        >
          ...
        </p>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            7
          </span>
        </button>
      </li>
      <li class="_element_rightArrow_2o1sv_38">
        <button class="_button_1dutd_1  _button_withIconRight_1dutd_6 _button_2o1sv_5"
                type="button"
        >
          <span class>
            Neste
          </span>
          <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1dutd_32"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="m7.1 5.8 6.1 6.1L7.1 18 9 19.9l8-8-8-8-1.9 1.9Z">
            </path>
          </svg>
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Tester/Pagination WithHiddenPageSummary play-test 1`] = `
<div data-test-block="true">
  <nav class="_pagination_1frpa_5"
       aria-label="Sidevelger"
  >
    <div class="_pagination_summaryhide_1frpa_39"
         aria-live="polite"
         aria-atomic="true"
    >
      Viser 1–10 av 70
    </div>
    <ul class="_paginationList_1frpa_20 _paginationList_summaryhidden_1frpa_35">
      <li>
        <button class="_button_6ybyo_1 _button_primary_6ybyo_1   _button_2o1sv_5"
                type="button"
                aria-current="true"
        >
          <span class="_buttonText_6ybyo_69">
            1
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            2
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            3
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            4
          </span>
        </button>
      </li>
      <li>
        <p class="_elipsis_2o1sv_29"
           aria-label
        >
          ...
        </p>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            7
          </span>
        </button>
      </li>
      <li class="_element_rightArrow_2o1sv_38">
        <button class="_button_1dutd_1  _button_withIconRight_1dutd_6 _button_2o1sv_5"
                type="button"
        >
          <span class>
            Neste
          </span>
          <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1dutd_32"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="m7.1 5.8 6.1 6.1L7.1 18 9 19.9l8-8-8-8-1.9 1.9Z">
            </path>
          </svg>
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Tester/Pagination WithListLength play-test 1`] = `
<div data-test-block="true">
  <nav class="_pagination_1frpa_5"
       aria-label="Sidevelger"
  >
    <div class
         aria-live="polite"
         aria-atomic="true"
    >
      Viser 9–12 av 70
    </div>
    <ul class="_paginationList_1frpa_20 ">
      <li class="_element_leftArrow_2o1sv_35">
        <button class="_button_1dutd_1 _button_withIconLeft_1dutd_6  _button_2o1sv_5"
                type="button"
        >
          <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1dutd_32"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="m16.9 17.98-6.1-6.1 6.1-6.1-1.8-1.9-8 8 8 8 1.8-1.9Z">
            </path>
          </svg>
          <span class>
            Forrige
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            1
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            2
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_primary_6ybyo_1   _button_2o1sv_5"
                type="button"
                aria-current="true"
        >
          <span class="_buttonText_6ybyo_69">
            3
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            4
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            5
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            6
          </span>
        </button>
      </li>
      <li>
        <p class="_elipsis_2o1sv_29"
           aria-label
        >
          ...
        </p>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            18
          </span>
        </button>
      </li>
      <li class="_element_rightArrow_2o1sv_38">
        <button class="_button_1dutd_1  _button_withIconRight_1dutd_6 _button_2o1sv_5"
                type="button"
        >
          <span class>
            Neste
          </span>
          <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1dutd_32"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="m7.1 5.8 6.1 6.1L7.1 18 9 19.9l8-8-8-8-1.9 1.9Z">
            </path>
          </svg>
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Tester/Pagination WithListLimit smoke-test 1`] = `
<div data-test-block="true">
  <ul class="_list_1xbs1_1 _list_withBullet_1xbs1_8 _list_hasSpacing_1xbs1_11 ">
    <li class="_element_sq04k_1 ">
      1 Donald Duck
    </li>
    <li class="_element_sq04k_1 ">
      2 Robbie Wiliams
    </li>
    <li class="_element_sq04k_1 ">
      3 Minnie Mouse
    </li>
    <li class="_element_sq04k_1 ">
      4 Katy Perry
    </li>
    <li class="_element_sq04k_1 ">
      5 Langbein
    </li>
  </ul>
  <nav class="_pagination_1frpa_5"
       aria-label="Sidevelger"
  >
    <div class
         aria-live="polite"
         aria-atomic="true"
    >
      Viser 1–5 av 42
    </div>
    <ul class="_paginationList_1frpa_20 ">
      <li>
        <button class="_button_6ybyo_1 _button_primary_6ybyo_1   _button_2o1sv_5"
                type="button"
                aria-current="true"
        >
          <span class="_buttonText_6ybyo_69">
            1
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            2
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            3
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            4
          </span>
        </button>
      </li>
      <li>
        <p class="_elipsis_2o1sv_29"
           aria-label
        >
          ...
        </p>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            9
          </span>
        </button>
      </li>
      <li class="_element_rightArrow_2o1sv_38">
        <button class="_button_1dutd_1  _button_withIconRight_1dutd_6 _button_2o1sv_5"
                type="button"
        >
          <span class>
            Neste
          </span>
          <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1dutd_32"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="m7.1 5.8 6.1 6.1L7.1 18 9 19.9l8-8-8-8-1.9 1.9Z">
            </path>
          </svg>
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Tester/Pagination WithNavigation play-test 1`] = `
<div data-test-block="true">
  <nav class="_pagination_1frpa_5"
       aria-label="Sidevelger"
  >
    <div class
         aria-live="polite"
         aria-atomic="true"
    >
      Viser 61–70 av 70
    </div>
    <ul class="_paginationList_1frpa_20 ">
      <li class="_element_leftArrow_2o1sv_35">
        <button class="_button_1dutd_1 _button_withIconLeft_1dutd_6  _button_2o1sv_5"
                type="button"
        >
          <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1dutd_32"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="m16.9 17.98-6.1-6.1 6.1-6.1-1.8-1.9-8 8 8 8 1.8-1.9Z">
            </path>
          </svg>
          <span class>
            Forrige
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            1
          </span>
        </button>
      </li>
      <li>
        <p class="_elipsis_2o1sv_29"
           aria-label
        >
          ...
        </p>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            4
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            5
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            6
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_primary_6ybyo_1   _button_2o1sv_5"
                type="button"
                aria-current="true"
        >
          <span class="_buttonText_6ybyo_69">
            7
          </span>
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Tester/Pagination WithPageSummary play-test 1`] = `
<div data-test-block="true">
  <nav class="_pagination_1frpa_5"
       aria-label="Sidevelger"
  >
    <div class
         aria-live="polite"
         aria-atomic="true"
    >
      Viser 1–10 av 70
    </div>
    <ul class="_paginationList_1frpa_20 ">
      <li>
        <button class="_button_6ybyo_1 _button_primary_6ybyo_1   _button_2o1sv_5"
                type="button"
                aria-current="true"
        >
          <span class="_buttonText_6ybyo_69">
            1
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            2
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            3
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            4
          </span>
        </button>
      </li>
      <li>
        <p class="_elipsis_2o1sv_29"
           aria-label
        >
          ...
        </p>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            7
          </span>
        </button>
      </li>
      <li class="_element_rightArrow_2o1sv_38">
        <button class="_button_1dutd_1  _button_withIconRight_1dutd_6 _button_2o1sv_5"
                type="button"
        >
          <span class>
            Neste
          </span>
          <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1dutd_32"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="m7.1 5.8 6.1 6.1L7.1 18 9 19.9l8-8-8-8-1.9 1.9Z">
            </path>
          </svg>
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Tester/Pagination WithRef smoke-test 1`] = `
<div data-test-block="true">
  <nav class="_pagination_1frpa_5"
       aria-label="Sidevelger"
       id="dummyIdForwardedFromRef"
  >
    <div class
         aria-live="polite"
         aria-atomic="true"
    >
      Viser 1–10 av 70
    </div>
    <ul class="_paginationList_1frpa_20 ">
      <li>
        <button class="_button_6ybyo_1 _button_primary_6ybyo_1   _button_2o1sv_5"
                type="button"
                aria-current="true"
        >
          <span class="_buttonText_6ybyo_69">
            1
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            2
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            3
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            4
          </span>
        </button>
      </li>
      <li>
        <p class="_elipsis_2o1sv_29"
           aria-label
        >
          ...
        </p>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            7
          </span>
        </button>
      </li>
      <li class="_element_rightArrow_2o1sv_38">
        <button class="_button_1dutd_1  _button_withIconRight_1dutd_6 _button_2o1sv_5"
                type="button"
        >
          <span class>
            Neste
          </span>
          <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1dutd_32"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="m7.1 5.8 6.1 6.1L7.1 18 9 19.9l8-8-8-8-1.9 1.9Z">
            </path>
          </svg>
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Tester/Pagination WithTextNextPref play-test 1`] = `
<div data-test-block="true">
  <nav class="_pagination_1frpa_5"
       aria-label="Sidevelger"
  >
    <div class
         aria-live="polite"
         aria-atomic="true"
    >
      Viser 11–20 av 70
    </div>
    <ul class="_paginationList_1frpa_20 ">
      <li class="_element_leftArrow_2o1sv_35">
        <button class="_button_1dutd_1 _button_withIconLeft_1dutd_6  _button_2o1sv_5"
                type="button"
        >
          <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1dutd_32"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="m16.9 17.98-6.1-6.1 6.1-6.1-1.8-1.9-8 8 8 8 1.8-1.9Z">
            </path>
          </svg>
          <span class>
            Forrige
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            1
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_primary_6ybyo_1   _button_2o1sv_5"
                type="button"
                aria-current="true"
        >
          <span class="_buttonText_6ybyo_69">
            2
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            3
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            4
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            5
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            6
          </span>
        </button>
      </li>
      <li>
        <button class="_button_6ybyo_1 _button_tertiary_6ybyo_1   _button_2o1sv_5"
                type="button"
        >
          <span class="_buttonText_6ybyo_69">
            7
          </span>
        </button>
      </li>
      <li class="_element_rightArrow_2o1sv_38">
        <button class="_button_1dutd_1  _button_withIconRight_1dutd_6 _button_2o1sv_5"
                type="button"
        >
          <span class>
            Neste
          </span>
          <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1dutd_32"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="m7.1 5.8 6.1 6.1L7.1 18 9 19.9l8-8-8-8-1.9 1.9Z">
            </path>
          </svg>
        </button>
      </li>
    </ul>
  </nav>
</div>
`;
